# weather-cvet1

./: .dockerignore  .env.example  .env.sample  .gitignore  Dockerfile  README.Docker.md  README.md  app.py  config.py  data_fetcher.py  database.py  docker-compose.yml  docker-entrypoint.sh  ha_client.py  main.py  pyproject.toml
src/: gunicorn.conf.py  loader.py  webserver.py  wsgi.py
src/templates/: index.html  users.html
templates/: index.html
